# ai-lab-investment

./: .env-sample  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW_INSTRUCTIONS.md  ai_workflow.md  justfile  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: academic-paper-writer.md  empirical-analysis.md
.devcontainer/: Dockerfile  devcontainer.json
conf/: config.yaml
docs/: index.md  modules.md
notebooks/: model_derivation.ipynb
paper/: AGENTS.md  _appendix.qmd  _calibration.qmd  _conclusion.qmd  _data.qmd  _discussion.qmd  _extensions.qmd  _introduction.qmd  _literature.qmd  _model.qmd  _quarto.yaml  _valuation.qmd  _variables.yml  econometrica.bst  generate_figures.py  index.qmd  index.tex  reference_corrections.md  references.bib  title.tex
references/: data_compendium.md  interview_transcript.md  media_review_frontier_ai.md
reports/: 00_summary.md  assessment-refine-review-2026-02-25.md  comment_01.md  comment_02.md  comment_03.md  comment_04.md  comment_05.md  comment_06.md  comment_07.md  comment_08.md  comment_09.md  comment_10.md  comment_11.md  comment_12.md  comment_13.md  comment_14.md  comment_15.md  comment_16.md  comment_17.md  comment_18.md  comment_19.md  comment_20.md  comment_21.md  comment_22.md  comment_23.md  comment_24.md  comment_25.md  comment_26.md  comment_27.md  comment_28.md  comment_29.md  comment_30.md  comment_31.md  comment_32.md  comment_33.md  consolidated_report.md  consolidated_review.md  consolidated_review_report.md  consolidated_review_v2.md  deep_research_prompt.md  (+23 more)
slides/: AGENTS.md
slides/long-form/: _calibration.qmd  _conclusion.qmd  _introduction.qmd  _model.qmd  _quarto.yml  _results.qmd  _revealed_beliefs.qmd  custom.scss  index.qmd  references.bib
src/: AGENTS.md
src/ai_lab_investment/: pipeline.py
src/ai_lab_investment/calibration/: __init__.py  data.py  revealed_beliefs.py
src/ai_lab_investment/figures/: paper.py  phase1.py  phase2.py  phase3.py  phase4.py  phase5.py  phi_allocation.py
src/ai_lab_investment/models/: __init__.py  base_model.py  (+5 more)
tests/: test_base_model.py  test_calibration.py  test_duopoly.py  test_nfirm.py  test_parameters.py  test_symbolic_duopoly.py  test_valuation.py
